--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest": "29.3.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.3.2",
+    "prisma": "^4.9.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
